# fastxlsx

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  python-format.yml  python-lint.yml  rust-clippy.yml  rust-format.yml  tests.yml
benchmarks/: bench_engines.py  run_matrix.py
src/: lib.rs
tests/: test_roundtrip.py
